WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251770
[Win] REGRESSION(
259818@main
) error LNK2019: unresolved external symbol currentStackPointer
https://bugs.webkit.org/show_bug.cgi?id=251770
Summary
[Win] REGRESSION(259818@main) error LNK2019: unresolved external symbol curre...
Fujii Hironori
Reported
2023-02-05 18:11:02 PST
[Win] REGRESSION(
259818@main
) error LNK2019: unresolved external symbol currentStackPointer AppleWin and WinCairo debug builds are failing after
259818@main
(
bug#251667
).
https://build.webkit.org/#/builders/56/builds/17337
Creating library C:/cygwin/home/buildbot/worker/Apple-Win-10-Debug-Build/build/WebKitBuild/Debug/lib64/WTF.lib and object C:/cygwin/home/buildbot/worker/Apple-Win-10-Debug-Build/build/WebKitBuild/Debug/lib64/WTF.exp Threading.obj : error LNK2019: unresolved external symbol currentStackPointer referenced in function "private: void __cdecl WTF::StackBounds::checkConsistency(void)const " (?checkConsistency@StackBounds@WTF@@AEBAXXZ) [C:\cygwin\home\buildbot\worker\Apple-Win-10-Debug-Build\build\WebKitBuild\Debug\Source\WTF\wtf\WTF.vcxproj] C:\cygwin\home\buildbot\worker\Apple-Win-10-Debug-Build\build\WebKitBuild\Debug\bin64\WTF.dll : fatal error LNK1120: 1 unresolved externals [C:\cygwin\home\buildbot\worker\Apple-Win-10-Debug-Build\build\WebKitBuild\Debug\Source\WTF\wtf\WTF.vcxproj] LowLevelInterpreterLib.vcxproj -> C:\cygwin\home\buildbot\worker\Apple-Win-10-Debug-Build\build\WebKitBuild\Debug\Source\JavaScriptCore\LowLevelInterpreterLib.dir\Debug\LowLevelInterpreterLib.lib
Attachments
[fast-cq] Patch
(1.88 KB, patch)
2023-02-05 19:44 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-02-05 18:36:04 PST
WTF::StackBounds::checkConsistency calls currentStackPointer only in debug builds.
https://github.com/WebKit/WebKit/blob/aea4f3f29a7c8f7dbf76e52647c30b6cfc4cc464/Source/WTF/wtf/StackBounds.h#L146
Fujii Hironori
Comment 2
2023-02-05 19:44:01 PST
Created
attachment 464858
[details]
[fast-cq] Patch
Mark Lam
Comment 3
2023-02-05 19:47:14 PST
Comment on
attachment 464858
[details]
[fast-cq] Patch Let's post a PR on Github instead in accordance with the current workflow.
Fujii Hironori
Comment 4
2023-02-05 19:47:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9668
EWS
Comment 5
2023-02-05 20:07:47 PST
Committed
259877@main
(9be772528ff2): <
https://commits.webkit.org/259877@main
> Reviewed commits have been landed. Closing PR #9668 and removing active labels.
Radar WebKit Bug Importer
Comment 6
2023-02-05 20:08:17 PST
<
rdar://problem/105066646
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug