[Win] REGRESSION(259818@main) error LNK2019: unresolved external symbol currentStackPointer https://bugs.webkit.org/show_bug.cgi?id=251770

Reviewed by Mark Lam.

Linking WTF.dll was failing due to the unresolved external symbol
currentStackPointer in Windows debug builds.
WTF::StackBounds::checkConsistency calls the function only in debug
builds. Restored the original code of currentStackPointer for 64bit
Windows.

* Source/JavaScriptCore/llint/LowLevelInterpreter.asm:
* Source/WTF/wtf/StackPointer.h:

Canonical link: https://commits.webkit.org/259877@main