Source/JavaScriptCore/llint/LowLevelInterpreter.asm
@@ -2801,14 +2801,6 @@ _wasm_trampoline_wasm_tail_call_indirect_wide32:
 
 end # WEBASSEMBLY and not X86_64_WIN
 
-if X86_64_WIN
-    global _currentStackPointer
-    _currentStackPointer:
-        move sp, r0
-        addp MachineRegisterSize + 32, r0 # Account for return address and shadow stack
-        ret
-end
-
 include? LowLevelInterpreterAdditions
 
 global _llintPCRangeEnd
